# Real-Time-Face-Detection

./: OpenCV_TensorFlow_AI_MODEL.ipynb  README.md  cv_model.py  face_recog.py  pyproject.toml  requirements.txt  tensorlfow_model.py
